# SimpleRLProj

./: .gitignore  README.md  TODO.md  compare.py  compare_logs.py  evaluate.py  pyproject.toml  requirements.txt  run.py  train.py
backup/: value_based.py.bak  value_based_v2.py.bak
checkpoints/dqn_baseline-ALE_Boxing-v5-20260113-185738/: config.yaml
configs/: base.yaml  dqn.yaml  dqn_ram.yaml  iqn.yaml  ppo_mujoco.yaml  sac_mujoco.yaml  value_based.yaml
configs/ablation/: value_based_pixel_fs1.yaml  value_based_pixel_fs4.yaml  value_based_ram_fs1.yaml  value_based_ram_fs4.yaml
docs/: report.md
logs/dqn_baseline-ALE_Boxing-v5-20260113-185738/: events.out.tfevents.1768301867.admin.15108.0
logs/dqn_baseline-ALE_Boxing-v5-20260113-190501/: events.out.tfevents.1768302308.admin.14440.0
rl_lib/: __init__.py  algorithms.py  base.py  buffers.py  config.py  envs.py  networks.py  types.py  utils.py
scripts/: capture_pong_frames.py  compare_frameskip.py  run_pomdp_ablation.sh  visualize_frameskip.py
