[project]
name = "rl-atari-baseline"
version = "0.2.0"
description = "RL framework for Atari and MuJoCo with DQN, IQN, and extensible to PPO/SAC"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["reinforcement-learning", "atari", "mujoco", "deep-rl", "dqn", "iqn", "ppo", "sac"]

dependencies = [
    # Core
    # PyTorch: CPU version installed by default. For CUDA, install torch separately:
    #   CPU: pip install torch
    #   CUDA: pip install torch --index-url https://download.pytorch.org/whl/cu118
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "opencv-python-headless>=4.8.0",
    # Gym / Atari
    "gymnasium[atari,accept-rom-license]>=0.29.0",
    "ale-py>=0.8.0",
    # Logging
    "tensorboard>=2.16.0",
    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# GPU monitoring utilities (optional - code works without this)
gpu = [
    "nvidia-ml-py3>=7.350.0",
]
# MuJoCo environments (for future PPO/SAC)
mujoco = [
    "mujoco>=3.0",
    "gymnasium[mujoco]>=0.29.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
train = "train:main"
eval = "evaluate:main"
compare-logs = "compare_logs:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# No standalone modules - everything is in rl_lib package

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_lib*"]
exclude = ["scripts*", "configs*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"