[project]
name = "rl-project"
version = "0.2.0"
description = "RL framework for Atari and MuJoCo with DQN, IQN, and extensible to PPO/SAC"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["reinforcement-learning", "atari", "mujoco", "deep-rl", "dqn", "iqn", "ppo", "sac"]

dependencies = [
    # Core
    # PyTorch: CPU version installed by default. For CUDA, install torch separately:
    #   CPU: pip install torch
    #   CUDA: pip install torch --index-url https://download.pytorch.org/whl/cu118
    "torch>=2.2.0",
    "numpy",
    "psutil",
    "pyyaml",
    "opencv-python-headless",
    # Gym / Atari
    "gymnasium",
    "ale-py",
    # Logging
    "tensorboard",
    # Utilities
    "tqdm",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
# GPU monitoring utilities (optional - code works without this)
gpu = [
    "nvidia-ml-py3",
]
# MuJoCo environments (for future PPO/SAC)
mujoco = [
    "mujoco",
    "gymnasium[mujoco]",
]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
train = "train:main"
eval = "evaluate:main"
compare-logs = "compare_logs:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# No standalone modules - everything is in rl_lib package

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_lib*"]
exclude = ["scripts*", "configs*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
